[project]
name = "gh-for-zush"
version = "0.1.0"
description = "GitHub-backed zush group wrapper"
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "tabulate>=0.9.0",
    "zush>=0.4.0",
    "zuu>=202602.1.3",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
